fix mobile alignment

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body, html {
   font-family: 'Press Start 2P', cursive;
   background-color: rgb(255,192,203);
   overflow:hidden;
-  background: url("../images/animation(HQ).gif") center repeat-x;
+  background: url('../images/animation(HQ).gif') center repeat-x;
   position: fixed;
   background-size: 100vw 100vh;
   top: 0;
@@ -72,7 +72,7 @@ body,html{
   font-size: 1.6vw;
 
 }
-}{
+{
   top: 270px;
 }
 .description{
